--- a/src/app/components/home/home.view.pug
+++ b/src/app/components/home/home.view.pug
@@ -2,8 +2,8 @@ page-header
 
 .container
     .content
-        .row
-            .col-xl-8.offset-xl-2
+        .row.no-margin--sm
+            .col-xs-12.no-padding--sm.col-lg-10.offset-lg-1.col-xl-8.offset-xl-2
                 ui-view
 
 user-profile
