--- a/src/scss/layout/_home.scss
+++ b/src/scss/layout/_home.scss
@@ -1,4 +1,13 @@
 .content {
     background: $gray-100;
     margin-bottom: 60px;
+    margin-left: -10px;
+    margin-right: -10px;
+    overflow-x: hidden;
+
+    @include min-sm {
+        margin-left: 0px;
+        margin-right: 0px;        
+    }
+
 }
